[package]
name = "byzer-shell"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prettytable-rs = "^0.8"
clap = { version = "3.1.8", features = ["derive"] }
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1"
yaml-rust = "0.4"
term = "0.5.2"
stringreader = "0.1.1"
rustyline = "9.1.2"
rustyline-derive = "0.6.0"
colored = "1.9"
lazy_static = "1.4.0"
indicatif = "0.16.2"
comfy-table = "4.1.1"